maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:13: error: type mismatch;
 found   : Unit
 required: Boolean
      if(murGauche())
                  ^WallFollowerMaze:33: error: not found: value mur
  mur=estFaceMur()
  ^WallFollowerMaze:35: error: not found: value mur
  return mur
         ^WallFollowerMaze:35: warning: enclosing method murGauche has result type Unit: return value discarded
  return mur
  ^